# Platformer

./: .gitignore  BUILD.bat  BUILD.txt  CMakeLists.txt
res/pics/: GrassTiles.png-autosave.kra
res/shaders/: mainFragment.glsl  mainVertex.glsl
src/: Audio.cpp  Camera.h  Enemy.cpp  Enemy.h  Map.cpp  Map.h  Player.cpp  Player.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  camera.h
src/engine/io/: InputHandler.cpp  InputHandler.h  ResourceLoader.cpp  ResourceLoader.h  Window.cpp  Window.h
src/main/: Game.cpp
src/math/: mat.h  vec3.h
